--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,12 +6,25 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Sign Up", new_user_registration_path, class: 'nav-link' %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Sign In", new_user_session_path, class: 'nav-link' %>
-      </li>
+      <% if signed_in? %>
+        <li class="nav-item">
+          <%= link_to "My Foods", foods_path, method: :get, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "My Recipes", recipes_path, method: :get, class: 'nav-link' %>
+        </li>
+
+        <li class="nav-item">
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Sign Up", new_user_registration_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign In", new_user_session_path, class: 'nav-link' %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
