--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,13 @@
+<% flash.each do |name, msg| -%>
+  <%= content_tag :div, msg, class: "#{name}" %>
+<% end -%>
+
 <div class="recipe-container my-3 p-3 border border-dark rounded border-2">
   <div class="d-flex justify-content-between mb-3">
     <h2 class="mb-3">My Recipes</h2>
     <%= link_to 'Create Recipe', new_recipe_path, class: 'border border-dark border-2 rounded p-3 text-dark text-decoration-none d-flex align-items-center' %>
   </div>
   <% @recipes.each do |recipe| %>
-    <%= render 'recipe', name: recipe.name, description: recipe.description %>
+    <%= render 'recipe', recipe: recipe %>
   <% end %>  
 </div>
