--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,1 +1,36 @@
-food index!
+
+
+<% if signed_in?%>
+<%= link_to 'Add food', new_food_path, class:"btn btn-danger"%>
+<%end%>
+<% flash.each do |type, msg| %>
+<div class="alert alert-info">
+  <%= msg %>
+</div>
+<% end %>
+
+<table class="table">
+  <thead>
+    <tr>
+
+      <th scope="col">Name</th>
+      <th scope="col">Measurement Unit</th>
+      <th scope="col">Price</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @foods.each do |food|%>
+    <tr>
+
+      <th scope="row">1</th>
+      <td><%= food.name %></td>
+      <td><%= food.measurement_unit %></td>
+      <td><%=food.price%></td>
+      <td>
+    <%= button_to "Delete",food_path(food), method: :delete ,class:"btn btn-warning"%>
+    </td>
+    </tr>
+<%end%>
+  </tbody>
+</table>
