Add add ingredient page logic

--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,7 +1,7 @@
 <div class="recipe p-3 border container my-1">
   <div class="row">
     <div class="col-4">
-      <strong><%= recipe.name %></strong>
+      <%= link_to recipe.name, recipe_path(recipe), method: :get, class: 'fw-bolder text-dark text-decoration-none' %>
       <%= button_to 'Delete', recipe_path(recipe), method: :delete, class: 'border border-dark border-2 rounded p-1 text-dark text-decoration-none d-flex align-items-center' %>
     </div>
     <div class="col-8">
