--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,12 @@
 
   <body>
     <div class="container">
-      <%= render "layouts/navbar" %> 
+      <%= render "layouts/navbar" %>
+      <% flash.each do |type, msg| %>
+      <div class="alert alert-info">
+        <%= msg %>
+      </div>
+      <% end %>
       <%= yield %>
     </div>
   </body>
