--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Recipes!</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="nav-item">
+<%=image_tag("logo", size: "110x110") %>
+</div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -17,6 +16,10 @@
         <li class="nav-item">
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
+        <li class="nav-item">
+      <span class="nav-link text-success">  Logged in as: <%= current_user.name%> </span>
+        </li>
+
       <% else %>
         <li class="nav-item">
           <%= link_to "Sign Up", new_user_registration_path, class: 'nav-link' %>
