Fixed various minor problmes

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,37 +1,41 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="nav-item">
-<%=image_tag("logo", size: "110x110") %>
-</div>
+    <%=image_tag("logo", size: "80x80" ) %>
+  </div>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if signed_in? %>
-        <li class="nav-item">
-          <%= link_to "My Foods", foods_path, method: :get, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "My Recipes", recipes_path, method: :get, class: 'nav-link' %>
-        </li>
+        <div class="d-flex">
+          <li class="nav-item">
+            <span class="nav-link text-success">Welcome! <%= current_user.name%></span>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "My Foods" , foods_path, method: :get, class: 'nav-link' %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "My Recipes" , recipes_path, method: :get, class: 'nav-link' %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "Public Recipes" , public_recipes_path, method: :get, class: 'nav-link' %>
+          </li>
+        </div>
 
         <li class="nav-item">
-          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= link_to "Sign Out" , destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
-        <li class="nav-item">
-      <span class="nav-link text-success">  Logged in as: <%= current_user.name%> </span>
-        </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign Up" , new_user_registration_path, class: 'nav-link' %>
+          </li>
 
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign Up", new_user_registration_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign In", new_user_session_path, class: 'nav-link' %>
-        </li>
-
-      <% end %>
-      <li class="nav-item">
-        <%= link_to "Public Recipes", public_recipes_path, method: :get, class: 'nav-link' %>
-      </li>
+          <li class="nav-item">
+            <%= link_to "Sign In" , new_user_session_path, class: 'nav-link' %>
+          </li>
+          <% end %>
     </ul>
   </div>
 </nav>
