--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,36 +1,35 @@
 
 
-<% if signed_in?%>
-<%= button_to 'Add food', new_food_path, method: :get, class:"btn btn-danger"%>
-<%end%>
-<% flash.each do |type, msg| %>
-<div class="alert alert-info">
-  <%= msg %>
+
+<div class="border border-2 border-dark rounded p-3 my-3">
+  <div class="d-flex justify-content-between">
+    <h2>Food list</h2>
+    <% if signed_in?%>
+      <%= button_to 'Add food', new_food_path, method: :get, class:"btn btn-danger"%>
+    <%end%>
+  </div>
+  <table class="table border border-2 border-dark rounded p-3">
+    <thead>
+      <tr>
+        <th class="col-3">Name</th>
+        <th class="col-3">Measurement Unit</th>
+        <th class="col-2">Price</th>
+        <th class="col-4  ">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @foods.each do |food|%>
+        <tr>
+          <td><%= food.name %></td>
+          <td><%= food.measurement_unit %></td>
+          <td><%= food.price%></td>
+          <td>
+            <% if @current_user == food.user%>
+            <%= button_to "Delete",food_path(food), method: :delete ,class:"btn btn-warning"%>
+            <% end %>
+          </td>
+        </tr>
+      <%end%>
+    </tbody>
+  </table>
 </div>
-<% end %>
-
-<table class="table">
-  <thead>
-    <tr>
-
-      <th scope="col">Name</th>
-      <th scope="col">Measurement Unit</th>
-      <th scope="col">Price</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @foods.each do |food|%>
-    <tr>
-
-      <th scope="row">1</th>
-      <td><%= food.name %></td>
-      <td><%= food.measurement_unit %></td>
-      <td><%=food.price%></td>
-      <td>
-    <%= button_to "Delete",food_path(food), method: :delete ,class:"btn btn-warning"%>
-    </td>
-    </tr>
-<%end%>
-  </tbody>
-</table>
