--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -15,5 +15,5 @@
     <%= f.number_field :price, class: "form-control" %>
   </div>
 
-  <%= f.submit "Add" ,class:"btn btn-dark mt-3"%>
+  <%= f.submit "Add" ,class:"btn btn-success text-dark btn-md mt-3"%>
 <% end %>
