--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -7,6 +7,6 @@
 
   <div class="d-flex my-3">
     <%= link_to 'Go back' , recipe_path(@recipe),
-      class: 'border border-dark border-2 rounded p-2 text-dark text-decoration-none d-flex align-items-center' %>
+      class: "link-seconday" %>
   </div>
 </div>
