--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,14 +21,16 @@
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="field mb-2">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+  <br>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions mb-2">
+    <%= f.submit "Sign up" , class:"btn btn-dark"%>
   </div>
 <% end %>
+
 
 <%= render "devise/shared/links" %>
