--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -7,12 +7,12 @@
   <% @recipes.each do |recipe|%>
   <li class=" list-group-item border border-dark">
     <div class="row">
-    <div class="col"> <div class="fs-3"><%= link_to recipe.name, recipe_path(recipe),method: :get %></div>
-    <div> by: <%= recipe.user.name%></div>
+    <div class="col"> <div class="fs-3 mb-3 "><%= link_to recipe.name, recipe_path(recipe),method: :get, class:"link-secondary" %></div>
+    <div class="fs-6" > by: <%= recipe.user.name%></div>
     </div>
     <div class="col">
-      <p>Total food items: <%= recipe.total_food_items%></p>
-        <p>Total price: <%= recipe.total_price%></p>
+      <p class="fs-6 mt-3">Total food items: <%= recipe.total_food_items%></p>
+        <p class="fs-6 pb-1">Total price: <%= recipe.total_price%></p>
 
     </div>
 
