--- a/app/views/recipes/_food_table.html.erb
+++ b/app/views/recipes/_food_table.html.erb
@@ -5,7 +5,7 @@
   <td class="col-3">
     <% if recipe_food.recipe.user == current_user%>
     <!-- modify link -->
-    <%= button_to 'Delete', recipe_recipe_food_path(id: recipe_food.id, recipe_id: recipe_food.recipe_id), method: :delete, class: 'border border-dark border-2 rounded p-1 text-dark text-decoration-none d-flex align-items-center' %>
+    <%= button_to 'Delete', recipe_recipe_food_path(id: recipe_food.id, recipe_id: recipe_food.recipe_id), method: :delete, class: 'btn btn-danger btn-sm mb-2' %>
     <% end %>
   </td>
 </tr>
