--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,8 +1,8 @@
 <div class="recipe p-3 border container my-1">
   <div class="row">
     <div class="col-4">
-      <%= link_to recipe.name, recipe_path(recipe), method: :get, class: 'fw-bolder text-dark text-decoration-none' %>
-      <%= button_to 'Delete', recipe_path(recipe), method: :delete, class: 'border border-dark border-2 rounded p-1 text-dark text-decoration-none d-flex align-items-center' %>
+      <%= link_to recipe.name, recipe_path(recipe), method: :get, class: "link-secondary" %>
+      <%= button_to 'Delete', recipe_path(recipe), method: :delete, class: 'btn text-dark btn-danger mt-3' %>
     </div>
     <div class="col-8">
       <p class="m-0"><%= recipe.description %></p>
