--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -20,10 +20,10 @@
     </div>
     <div class="d-flex justify-content-between">
 
-      <%= link_to 'Generate shopping list', shopping_list_index_path , class: 'border border-dark border-2 rounded p-3 text-dark text-decoration-none d-flex align-items-center'%>
+      <%= link_to 'Generate shopping list', shopping_list_index_path , class: 'btn btn-success text-dark'%>
 
       <% if @recipe.user == @current_user%>
-        <%= link_to 'Add Ingredient!', new_recipe_recipe_food_path(@recipe), class: 'border border-dark border-2 rounded p-2 text-dark text-decoration-none d-flex align-items-center' %>
+        <%= link_to 'Add Ingredient!', new_recipe_recipe_food_path(@recipe), class: 'btn btn-success text-dark' %>
       <% end %>
     </div>
   </div>
