--- a/app/views/recipe_foods/_food_row.html.erb
+++ b/app/views/recipe_foods/_food_row.html.erb
@@ -4,6 +4,6 @@
     <td class="col-4"><%= food.name %></td>
     <td class="col-2"><%= food.measurement_unit %></td>
     <td class="col-2 me-3"><%= f.number_field :quantity, class: 'w-100' %></td>
-    <td class="col-3 p-0"><%= f.submit 'Add ingredient', class: 'p-0' %></td>
+    <td class="col-3 p-0"><%= f.submit 'Add ingredient', class: 'p-1 btn btn-success text-white' %></td>
   </tr>
 <% end %>
