--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,7 +5,7 @@
 <div class="recipe-container my-3 p-3 border border-dark rounded border-2">
   <div class="d-flex justify-content-between mb-3">
     <h2 class="mb-3">My Recipes</h2>
-    <%= link_to 'Create Recipe', new_recipe_path, class: 'btn text-dark  d-flex align-items-center btn-success' %>
+    <%= link_to 'Create Recipe', new_recipe_path, class: 'btn text-white  d-flex align-items-center btn-success' %>
   </div>
   <% @recipes.each do |recipe| %>
     <%= render 'recipe', recipe: recipe %>
