--- a/app/views/shopping_list/_foods.html.erb
+++ b/app/views/shopping_list/_foods.html.erb
@@ -1,9 +1,6 @@
-
-
-<table class="table">
+<table class="table border border-2 border-dark p-3 my-3">
   <thead>
     <tr>
-
       <th scope="col">Food</th>
       <th scope="col">Quantity</th>
       <th scope="col">Price</th>
@@ -11,12 +8,11 @@
   </thead>
   <tbody>
     <% @foods.each do |f|%>
-    <tr>
-      <td><%= f.name %></td>
-      <td><%= f.quantity_sum %> <%= f.measurement_unit %></td>
-      <td>$<%=f.price * f.quantity_sum%></td>
-
-    </tr>
-<%end%>
+      <tr>
+        <td><%= f.name %></td>
+        <td><%= f.quantity_sum %><%= f.measurement_unit %></td>
+        <td>$<%=f.price * f.quantity_sum%></td>
+      </tr>
+    <%end%>
   </tbody>
 </table>
