--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -5,7 +5,7 @@
   <div class="d-flex justify-content-between">
     <h2>Food list</h2>
     <% if signed_in?%>
-      <%= button_to 'Add food', new_food_path, method: :get, class:"btn text-dark btn-success"%>
+      <%= button_to 'Add food', new_food_path, method: :get, class:"btn text-white btn-success"%>
     <%end%>
   </div>
   <table class="table border border-2 border-dark rounded p-3">
@@ -14,7 +14,7 @@
         <th class="col-3">Name</th>
         <th class="col-3">Measurement Unit</th>
         <th class="col-2">Price</th>
-        <th class="col-4  ">Actions</th>
+        <th class="col-4">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -25,7 +25,7 @@
           <td><%= food.price%></td>
           <td>
             <% if @current_user == food.user%>
-            <%= button_to "Delete",food_path(food), method: :delete ,class:"btn text-dark btn-danger btn-sm"%>
+            <%= button_to "Delete",food_path(food), method: :delete ,class:"btn text-white btn-danger btn-sm"%>
             <% end %>
           </td>
         </tr>
