--- a/app/views/recipe_foods/new.html.erb
+++ b/app/views/recipe_foods/new.html.erb
@@ -1,12 +1,11 @@
 <div>
   <h2>Add Ingredient!</h2>
-
   <div>
     <%= render 'form_food_table', recipe_food: @recipe_food,foods: @foods %>
   </div>
 
   <div class="d-flex my-3">
     <%= link_to 'Go back' , recipe_path(@recipe),
-      class: "link-seconday" %>
+      class: "btn btn-secondary" %>
   </div>
 </div>
