--- a/app/views/shopping_list/index.html.erb
+++ b/app/views/shopping_list/index.html.erb
@@ -1,24 +1,12 @@
-
-<main class="container">
-  <br>
-  <br>
-  <br>
-
-<h1 class="d-flex justify-content-center">Shopping List</h1>
-<br>
-<br>
-
-<div class="d-flex justify-content-evenly">
-<div >
-  <p> Amount of food items to buy:  <%= @total_items%></p>
-
-</div>
-<div >
-
-  <p>Total value of food needed: <%= @total_value%></p>
-</div>
-
-</div>
-
-<%= render "foods"%>
-<main/>
+<main class="container p-5">
+  <h1 class="d-flex justify-content-center mb-5">Shopping List</h1>
+  <div class="d-flex justify-content-evenly">
+    <div>
+      <p>Amount of food items to buy: <%= @total_items%></p>
+    </div>
+    <div>
+      <p>Total value of food needed: $<%= @total_value%></p>
+    </div>
+  </div>
+  <%= render "foods" %>
+</main>
