--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -8,8 +8,8 @@
       </div>
       <% if @recipe.user == @current_user%>
         <%= form_for @recipe, :method => :PUT do |f| %>
-          <%= f.submit "public" if @recipe.public %>
-          <%= f.submit "private" unless @recipe.public %>
+          <%= f.submit "public", class: 'btn btn-success text-white' if @recipe.public %>
+          <%= f.submit "private" , class: 'btn btn-danger text-white' unless @recipe.public %>
         <% end %>
       <% end %>
     </div>
@@ -21,9 +21,7 @@
       <%= @recipe.description%>
     </div>
     <div class="d-flex justify-content-between">
-
       <%= link_to 'Generate shopping list', shopping_list_index_path , class: 'border border-dark border-2 rounded p-3 text-dark text-decoration-none d-flex align-items-center'%>
-
       <% if @recipe.user == @current_user%>
         <%= link_to 'Add Ingredient!', new_recipe_recipe_food_path(@recipe), class: 'border border-dark border-2 rounded p-2 text-dark text-decoration-none d-flex align-items-center' %>
       <% end %>
