--- a/app/views/recipe_foods/_form_food_table.html.erb
+++ b/app/views/recipe_foods/_form_food_table.html.erb
@@ -1,3 +1,4 @@
+<% if foods.length != 0 %>
 <table class="foods-table container border border-dark border-2">
   <tr class="row px-3 label-row mx-0">
     <th class="col-4">Food</th>
@@ -9,3 +10,6 @@
     <%= render 'food_row', food: food, recipe_food: recipe_food %>
   <% end %>
 </table>
+<% else %>
+<span>You have not added any food!</span>
+<% end %>
