--- a/app/views/recipes/_recipe_food_table.html.erb
+++ b/app/views/recipes/_recipe_food_table.html.erb
@@ -1,3 +1,4 @@
+<% if recipe_foods.length != 0 %>
 <table class="recipe-foods-table container border border-dark border-2">
   <tr class="row px-3 label-row mx-0">
     <th class="col-5">Food</th>
@@ -9,3 +10,6 @@
     <%= render 'food_table', recipe_food: recipe_food, current_user: current_user %>
   <% end %>
 </table>
+<% else %>
+<span>No Ingredients added!</span>
+<% end %>
