--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -7,7 +7,11 @@
     <h2 class="mb-3">My Recipes</h2>
     <%= link_to 'Create Recipe', new_recipe_path, class: 'btn text-white  d-flex align-items-center btn-success' %>
   </div>
-  <% @recipes.each do |recipe| %>
-    <%= render 'recipe', recipe: recipe %>
+  <% if @recipes.length != 0%>
+    <% @recipes.each do |recipe| %>
+      <%= render 'recipe', recipe: recipe %>
+    <% end %>
+  <% else %>
+    <span>No recipes added!</span>
   <% end %>
 </div>
