--- a/app/views/shopping_list/_foods.html.erb
+++ b/app/views/shopping_list/_foods.html.erb
@@ -1,3 +1,4 @@
+<% if @foods.length != 0%>
 <table class="table border border-2 border-dark p-3 my-3">
   <thead>
     <tr>
@@ -16,3 +17,7 @@
     <%end%>
   </tbody>
 </table>
+<% else %>
+<span>No ingredients in any of your recipes!</span>
+<% end %>
+
